--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,16 +3,18 @@
 @tailwind utilities;
 
 
-.html, body {
+.html,
+body {
   background-color: #080810;
   margin: 0;
   padding: 0;
+  font-family: "Inter", sans-serif;
 }
 
 .inner-shadow {
   box-shadow: inset 0px 80px 80px -20px rgba(0, 0, 0, 0.9);
   /* border-radius: 80% 80% 10% 10% / 100% 100% 20% 20%; */
-  
+
 }
 
 .inner-shadow-2 {
@@ -29,47 +31,135 @@
 
 .swiper-button-prev,
 .swiper-button-next {
-  width: 10px; 
-  height: 10px; 
-  background-size: cover; 
-  background-repeat: no-repeat; 
+  width: 10px;
+  height: 10px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-/* .swiper-button-prev {
-  background-image: url('../../public/assets/icons/left-arrow.png') !important; 
-  left: 40px; 
-} */
-
-/* .swiper-button-prev:after {
-  background-image: none; 
-} */
-
-/* .swiper-button-next:after {
-  background-image: none; 
-} */
-
-/* .swiper-button-next {
-  background-image: url('../../public/assets/icons/right-arrow.png') !important; 
-  right: 40px; 
-} */
-
-video{
+video {
   object-fit: inherit;
   max-width: none;
 }
 
-.bg-gray-300{
+.bg-gray-300 {
   background-color: azure !important;
 }
 
-.text-blue-gray-900{
+.text-blue-gray-900 {
   color: white;
 }
-.bg-gray-900{
+
+.bg-gray-900 {
   background-image: linear-gradient(to right, rgba(236, 161, 107, 1), rgba(248, 63, 152, 1)) !important;
 }
 
-.place-items-center{
-  width: 1rem;
-  height: 1rem;
+.place-items-center {
+  width: 1rem !important;
+  height: 1rem !important;
+}
+
+
+.swiper_container_1 {
+  width: 30rem !important;
+  height: 52rem !important;
+  padding: 2rem 0 !important;
+  position: relative;
+
+}
+
+.swiper_container_1 .swiper-slide {
+  width: 20rem !important;
+  height: 20rem !important;
+  position: relative;
+}
+
+.swiper_container_1 .swiper-slide img {
+  width: 20rem;
+  height: 20rem;
+  border-radius: 2rem;
+  object-fit: cover;
+}
+
+.swiper_container_1 .slider-controler {
+  position: relative;
+  bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.swiper_container_1 .swiper-slide-prev {
+  transition: 300s ease-in-out;
+  transform: rotate(-15deg) !important;
+}
+
+.swiper_container_1 .swiper-slide-next {
+  transition: 300s ease-in-out;
+  transform: rotate(15deg) !important;
+}
+
+.swiper_container_1 .swiper-slide-active {
+  transition: 200s ease-in-out;
+  margin: 0px 0px 0px 70px;
+}
+
+
+.mySwiper .swiper-slide img {
+  width: 40rem;
+  height: 40rem;
+  border-radius: 2rem;
+  object-fit: cover;
+}
+
+.mySwiper .swiper-pagination {
+  margin-top: 5rem;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  bottom: 0 !important;
+  transform: translate3d(0px, 0, 0) !important;
+}
+
+.mySwiper .swiper-pagination .swiper-pagination-bullet {
+  justify-content: center;
+  right: 0;
+  left: 0;
+  bottom: 0 !important;
+  transform: none !important;
+  width: 5rem;
+  border-radius: 20px !important;
+  height: 10px;
+  background: white !important;
+}
+
+.mySwiper .swiper-pagination .swiper-pagination-bullet-active {
+  background: white !important;
+  width: 7rem;
+  height: 10px;
+}
+
+.recentShows {
+  width: 100%;
+  height: 100%;
+  
+}
+
+.recentShows .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  padding: 10px 180px !important;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.recentShows .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
