--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,9 +25,31 @@ body {
   box-shadow: inset -70px 90px 120px 20px rgba(0, 0, 0, 0.9);
 }
 
-/* .swiper-wrapper{
-  padding: 0px 100px 0px 40px !important;
-} */
+.clientInfo .swiper-pagination {
+  margin-top: 5rem;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  bottom: 0 !important;
+  transform: translate3d(0px, 0, 0) !important;
+}
+
+.clientInfo .swiper-pagination .swiper-pagination-bullet {
+  justify-content: center;
+  right: 0;
+  left: 0;
+  bottom: 0 !important;
+  transform: none !important;
+  width: 3rem;
+  border-radius: 20px !important;
+  height: 10px;
+  background: white !important;
+}
+.clientInfo .swiper-pagination .swiper-pagination-bullet-active {
+  width: 4.5rem !important;
+}
 
 .swiper-button-prev,
 .swiper-button-next {
@@ -60,7 +82,7 @@ video {
 }
 
 
-.swiper_container_1 {
+.categoryListSwiper {
   width: 30rem !important;
   height: 52rem !important;
   padding: 2rem 0 !important;
@@ -68,20 +90,26 @@ video {
 
 }
 
-.swiper_container_1 .swiper-slide {
+.categoryListSwiper .swiper-slide {
   width: 20rem !important;
   height: 20rem !important;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 18px;
+  font-size: 22px;
+  font-weight: bold;
 }
 
-.swiper_container_1 .swiper-slide img {
+.categoryListSwiper .swiper-slide img {
   width: 20rem;
   height: 20rem;
   border-radius: 2rem;
   object-fit: cover;
 }
 
-.swiper_container_1 .slider-controler {
+.categoryListSwiper .slider-controler {
   position: relative;
   bottom: 2rem;
   display: flex;
@@ -89,28 +117,116 @@ video {
   justify-content: center;
 }
 
-.swiper_container_1 .swiper-slide-prev {
-  transition: 300s ease-in-out;
+.categoryListSwiper .swiper-slide-prev {
+  transition: 400s ease-in-out;
+  border-radius: 2rem;
+  margin: 0 0 0 70px;
   transform: rotate(-15deg) !important;
 }
 
-.swiper_container_1 .swiper-slide-next {
-  transition: 300s ease-in-out;
+.categoryListSwiper .swiper-slide-next {
+  transition: 400s ease-in-out;
+  border-radius: 2rem;
+  margin: 0 0 0 70px;
   transform: rotate(15deg) !important;
 }
 
-.swiper_container_1 .swiper-slide-active {
-  transition: 200s ease-in-out;
-  margin: 0px 0px 0px 70px;
-}
-
-
-.mySwiper .swiper-slide img {
-  width: 40rem;
-  height: 40rem;
+.categoryListSwiper .swiper-slide-active {
+  transition: 400s ease-in-out;
   border-radius: 2rem;
-  object-fit: cover;
+  transform: rotate(0deg) !important;
+  margin: 0px 0px 0px 120px;
 }
+
+.categoryListSwiper .swiper-pagination .swiper-pagination-bullet-active {
+  background: white !important;
+  width: 7rem;
+  height: 10px;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(1n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(2n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(3n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(4n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(5n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(6n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(7n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(8n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(9n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.categoryListSwiper .swiper-slide:nth-child(10n) {
+  margin-bottom: -50px !important;
+  margin-top: -50px !important;
+}
+
+.mySwiper {
+  perspective: 1000px;
+  max-width: 80%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.mySwiper .swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 700px;
+  height: 400px;
+}
+.mySwiper .swiper-slide img {
+  display: block;
+  width: 100%;
+}
+
+.mySwiper .swiper-slide .swiper-slide-prev {
+  display: block;
+  width: 100%;
+}
+
+.mySwiper .swiper-slide .swiper-slide-next {
+  display: block;
+  width: 100%;
+}
+
+.mySwiper .swiper-slide .swiper-slide-active {
+  display: block;
+  width: 100%;
+}
+
 
 .mySwiper .swiper-pagination {
   margin-top: 5rem;
@@ -129,16 +245,10 @@ video {
   left: 0;
   bottom: 0 !important;
   transform: none !important;
-  width: 5rem;
+  width: 1rem;
   border-radius: 20px !important;
   height: 10px;
   background: white !important;
-}
-
-.mySwiper .swiper-pagination .swiper-pagination-bullet-active {
-  background: white !important;
-  width: 7rem;
-  height: 10px;
 }
 
 .recentShows {
@@ -162,4 +272,144 @@ video {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.BannerVideo {
+  width: 100%;
+  height: 100%;
+  
+}
+.BannerVideo .swiper-wrapper {
+  min-height: 400px
+  
+}
+
+.BannerVideo .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  padding: 0 !important; 
+  position: relative;
+  z-index: 50;
+}
+
+.BannerVideo .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
+.swiper-slide-roundedStyle {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.celebritiesSwiper {
+  width: 100%;
+  overflow: hidden;
+}
+
+.celebritiesSwiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+  transition: all .3s ease;
+}
+
+.celebritiesSwiper .swiper-slide .swiper-wrapper {
+  gap: 10rem;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 400s; */
+}
+
+.celebritiesSwiper .swiper-slide-prev {
+
+  z-index: 2;
+  /* width: 20rem !important;
+  height: 20rem !important; */
+}
+
+.celebritiesSwiper .swiper-slide-active {
+  z-index: 2
+}
+
+.celebritiesSwiper .swiper-slide-next {
+  z-index: 2;
+  /* width: 20rem !important;
+  height: 20rem !important; */
+}
+
+.celebritiesSwiper .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.celebritiesSwiper .swiper-slide:nth-child(3n)   {
+  padding-top: -50px !important;
+  padding-bottom: -50px !important;
+}
+
+.profilePhotoSwiper {
+  width: 100%;
+  min-height: 45rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.profilePhotoSwiper .swiper-wrapper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  height: calc((100% - 30px) / 2) !important;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.profilePhotoSwiper .swiper-pagination .swiper-pagination-bullet {
+  justify-content: center;
+  transform: none !important;
+  width: 2.5rem;
+  border-radius: 20px !important;
+  height: 8px;
+  background: white !important;
+}
+
+.profilePhotoSwiper .swiper-pagination .swiper-pagination-bullet-active {
+  width: 4rem;
+  height: 8px;
 }
