--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,6 +47,7 @@ body {
   height: 10px;
   background: white !important;
 }
+
 .clientInfo .swiper-pagination .swiper-pagination-bullet-active {
   width: 4.5rem !important;
 }
@@ -207,6 +208,7 @@ video {
   width: 700px;
   height: 400px;
 }
+
 .mySwiper .swiper-slide img {
   display: block;
   width: 100%;
@@ -254,7 +256,7 @@ video {
 .recentShows {
   width: 100%;
   height: 100%;
-  
+
 }
 
 .recentShows .swiper-slide {
@@ -277,17 +279,17 @@ video {
 .BannerVideo {
   width: 100%;
   height: 100%;
-  
+
 }
+
 .BannerVideo .swiper-wrapper {
   min-height: 400px
-  
 }
 
 .BannerVideo .swiper-slide {
   text-align: center;
   font-size: 18px;
-  padding: 0 !important; 
+  padding: 0 !important;
   position: relative;
   z-index: 50;
 }
@@ -375,7 +377,7 @@ video {
   object-fit: cover;
 }
 
-.celebritiesSwiper .swiper-slide:nth-child(3n)   {
+.celebritiesSwiper .swiper-slide:nth-child(3n) {
   padding-top: -50px !important;
   padding-bottom: -50px !important;
 }
@@ -387,13 +389,14 @@ video {
     /* min-height: 45rem; */
     /* margin-left: auto;
     margin-right: auto; */
-    
+
   }
 
-  .swiper-grid-column > .swiper-wrapper {
+  .swiper-grid-column>.swiper-wrapper {
     flex-wrap: wrap;
     flex-direction: row !important;
   }
+
   /* .swiper-wrapper{
     padding-left: 30px;
     padding-right: 30px;
@@ -422,13 +425,14 @@ video {
   border-radius: 20px !important;
   height: 8px;
   background: white !important;
-  
+
 }
 
 .profilePhotoSwiper .swiper-pagination .swiper-pagination-bullet-active {
   width: 4rem;
   height: 8px;
 }
+
 .products-parent .slick-slider button {
   margin-top: -15px;
 }
@@ -438,6 +442,7 @@ video {
   color: rgb(234, 44, 75);
   margin-top: -50px;
 }
+
 .carousel .thumb {
   transition: border 0.15s ease-in;
   display: inline-block;
@@ -449,6 +454,7 @@ video {
   padding: 2px;
   height: 100px;
 }
+
 .carousel .control-dots .dot.selected,
 .carousel .control-dots .dot:hover {
   opacity: 1;
@@ -457,6 +463,7 @@ video {
   width: 10px;
   height: 1px;
 }
+
 /* the slides */
 
 /* .products-parent .slick-slider .slick-list .slick-track .slick-slide div {
@@ -487,6 +494,7 @@ video {
   width: 100%;
   height: 5px;
 }
+
 .sliders .thumb {
   display: none;
 }
@@ -495,13 +503,102 @@ video {
   background-color: red;
   top: 30px;
 }
-.slick-arrow .slick-prev{
+
+.slick-arrow .slick-prev {
   display: none !important;
 }
+
 .slick-arrow {
   display: none !important;
 }
 
-.cards :nth-child(n+3){
-  transform: translateY(-330px) ;
+.cards :nth-child(n+3) {
+  transform: translateY(-330px);
 }
+
+/* .swiper-slide .swiper-slide-active{
+  background-color: red !important;
+  color: red !important;
+  height: 200px;
+} */
+.slider01 {
+  width: 100%;
+  height: 100%;
+  background-color: "#080810";
+  /* position: absolute !important; */
+}
+
+.slider01 .swiper-slide-active {
+
+  width: 273.7px !important;
+  margin-right: 36px !important;
+
+}
+
+.slider01 .swiper-slide-next {
+
+  transform: rotate(345deg) !important;
+  margin-top: -32px !important;
+  
+
+ 
+} 
+
+.slider01 .swiper-slide-prev {
+ 
+  transform: rotate(12deg) !important;
+margin-right: 30px !important;
+margin-top: -30px !important;
+
+
+}
+
+.slider01 .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  height: 300px;
+  width: 215px !important;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px !important;
+
+
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.slider01 .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+}
+
+
+.html5-video-player {
+  border-radius: 30px !important;
+}
+.ytp-shorts-title-channel{
+  display: none !important;
+}
+
+.mySwiper05 .swiper-button-next{
+  display: none !important;
+}
+.mySwiper05 .swiper-button-prev{
+  display: none !important;
+}
+
+.mySwiper05 .swiper-pagination  .swiper-pagination-bullet {
+  width: 20px;
+  height: 2px;
+  background-color: white;
+    
+}
+
